# server

cmake/: mariadb_connector_c.cmake  ssl.cmake
extra/external_wolfssl/: CMakeLists.txt
extra/mariabackup/: xtrabackup.cc
include/: json_lib.h  ssl_compat.h  violite.h
include/mysql/: service_my_crypt.h
mysql-test/: mariadb-test-run.pl
mysql-test/main/: charset_client_win.test  opt_trace.result  order_by.result  order_by.test  order_by_innodb.result  order_by_innodb.test
mysql-test/suite/atomic/: x.test
mysql-test/suite/binlog/r/: online_alter.result  online_alter_binlog.result
mysql-test/suite/binlog/t/: online_alter.test  (+1 more)
mysql-test/suite/innodb/: disabled.def
mysql-test/suite/innodb_gis/: disabled.def
mysys/: charset.c
mysys_ssl/: my_crypt.cc  my_md5.cc  my_sha.ic
sql/: des_key_file.h  handler.cc  handler.h  item_jsonfunc.cc  log.cc  log.h  log_event.h  log_event_server.cc  sp_instr.cc  sp_instr.h  sql_class.cc  sql_class.h  sql_prepare.h  sql_table.cc  sql_yacc.yy  table.h  unireg.cc
storage/innobase/btr/: btr0btr.cc
storage/innobase/buf/: buf0flu.cc
storage/innobase/dict/: dict0load.cc
storage/innobase/fil/: fil0fil.cc
storage/innobase/handler/: ha_innodb.cc  handler0alter.cc
storage/innobase/ibuf/: ibuf0ibuf.cc
storage/innobase/include/: log0log.h  log0recv.h
storage/innobase/log/: log0crypt.cc  log0log.cc  log0recv.cc
storage/innobase/mtr/: mtr0mtr.cc
storage/innobase/os/: os0file.cc
storage/innobase/srv/: srv0start.cc
storage/spider/: spd_table.cc
strings/: ctype-uca.c  ctype-uca.h  json_lib.c  uca-dump.c
(+6 files in other folders)
