ADD_DEFINITIONS(${SSL_DEFINES})

FIND_LIBRARY(LIBWOLFSSL wolfssl)
ADD_LIBRARY(wolfssl SHARED IMPORTED GLOBAL)
SET_PROPERTY(TARGET wolfssl PROPERTY IMPORTED_LOCATION ${LIBWOLFSSL})
# ADD_LIBRARY(wolfcrypt SHARED IMPORTED GLOBAL)
# SET_PROPERTY(TARGET wolfcrypt PROPERTY IMPORTED_LOCATION ${LIBWOLFSSL})
